kubernetes/policies/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  rules:
  - name: disallow-root-user
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        selector:
          matchExpressions:
          - {key: app.kubernetes.io/name, operator: NotIn, values: ["tempo", "promtail"]}
    validate:
      message: "Running as root is not allowed. Set runAsNonRoot security context."
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
